--- a/synthetic/chr7_43,600,000-43,750,000_inserted_into_chr7_43,600,000.md
+++ b/synthetic/chr7_43,600,000-43,750,000_inserted_into_chr7_43,600,000.md
@@ -16,6 +16,14 @@ Figure 1
 
 <hr />
 
+![image](images/insert_chr7_60_43,600,000-43,750,000_RC_target_chr7_60_43,600,000-43,610,000_ONT_no_2nd_1_all.jpg)
+
+Figure 1
+
+<hr />
+
+<hr />
+
 ![image](images/insert_chr7_60_43,600,000-43,750,000_RC_target_chr7_60_43,600,000-43,610,000_ONT_no_2nd_1_result.jpg)
 
 Figure 2
