--- a/synthetic/chr7_43,600,000-43,750,000_inserted_into_chr7_43,650,000.md
+++ b/synthetic/chr7_43,600,000-43,750,000_inserted_into_chr7_43,650,000.md
@@ -6,6 +6,9 @@ The reverse complement of **chr7 43,600,000-43,750,000** is insert in the the re
 
 ### Primary region spanning: chr7 43,600,000-43,750,000 
 
+For this analysis the reads at chr7 43,600,000 and chr7 43,650,000 where selected and analysed using the
+ ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.
+
 <hr />
 
 ![image](images/insert_chr7_60_43,600,000-43,750,000_RC_target_chr7_60_43,650,000-43,800,000_ONT_no_2nd_1.jpg)
@@ -30,7 +33,10 @@ Figure 3
 
 <hr />
 
-### Primary region spanning: chr7 43,650,000 
+### Primary region spanning: chr7 43,650,000-43,800,000
+
+For this analysis the reads at chr7 43,750,000 and 43,800,000 where selected and analysed using the
+ ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.
 
 <hr />
 
