--- a/synthetic/chr7_43,600,000-43,750,000_inserted_into_chr8_43,600,000-43,750,000.md
+++ b/synthetic/chr7_43,600,000-43,750,000_inserted_into_chr8_43,600,000-43,750,000.md
@@ -4,7 +4,9 @@ Analysis of the genome in which:
 
 The region **chr7 43,600,000-43,750,000** is insert in to the region **chr8 43,600,000-43,750,000**
 
-### Primary region spanning: chr7 43,600,000-43,750,000 
+### Primary region spanning: chr7 43,600,000-43,750,000  
+
+For this analysis the reads at chr7 43,600,000 and chr7 43,750,000 where selected and analysed using the  ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option
 
 <hr />
 
@@ -31,7 +33,7 @@ Figure 3
 <hr />
 
 ### Primary region spanning: chr8 43,600,000-43,750,000 
-
+For this analysis the reads at chr8 43,600,000 and chr8 43,750,000 where selected and analysed using the  ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option
 <hr />
 
 ![image](images/insert_chr7_60_43,600,000-43,750,000_target_chr8_60_43,600,000-43,750,000_ONT_no_2nd_1.jpg)
