--- a/synthetic/chr7_43,600,000-43,750,000_inserted_into_chr7_43,550,000.md
+++ b/synthetic/chr7_43,600,000-43,750,000_inserted_into_chr7_43,550,000.md
@@ -1,10 +1,13 @@
-# Chr7 43,600,000-43,750,000  inserted into Chr7 43,550,000
+# Chr7 43,600,000-43,750,000  inserted into Chr7 43,550,000-43,800,000
 
 Analysis of the genome in which: 
 
 The reverse complement of **chr7 43,600,000-43,750,000** is insert in the the region **chr7 43,550,000-43,800,000**
 
 ### Primary region spanning: chr7 43,600,000-43,750,000 
+
+For this analysis the reads at chr7 43,550,000 and chr7 43,600,000 where selected and analysed using the
+ ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.
 
 <hr />
 
@@ -30,7 +33,10 @@ Figure 3
 
 <hr />
 
-### Primary region spanning: chr7 43,550,000 
+### Primary region spanning: chr7 43,550,000-43,800,000
+
+For this analysis the reads at chr7 43,750,000 and chr7 43,800,000 where selected and analysed using the
+ ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.
 
 <hr />
 
