--- a/synthetic/chr7_43,600,000-43,750,000_inserted_into_chr7_50000000-51,000,000.md
+++ b/synthetic/chr7_43,600,000-43,750,000_inserted_into_chr7_50000000-51,000,000.md
@@ -6,6 +6,8 @@ The region **chr7 43,600,000-43,750,000** is insert in to the region **chr7 5000
 
 ### Primary region spanning: chr7 43,600,000-43,750,000 
 
+For this analysis the reads at chr7 43,600,000 and chr7 43,750,000 where selected and analysed using the  ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.
+
 <hr />
 
 ![image](images/insert_chr7_60_43,600,000-43,750,000_target_chr7_60_50000000-51,000,000_ONT_no_2nd_1.jpg)
@@ -31,6 +33,8 @@ Figure 3
 <hr />
 
 ### Primary region spanning: chr7 50000000-51,000,000 
+
+For this analysis the reads at chr7 50,000,000 and chr7 51,000,000 where selected and analysed using the  ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.
 
 <hr />
 
