--- a/synthetic/chr7_43,600,000-43,750,000_inserted_into_chr8_20000000.md
+++ b/synthetic/chr7_43,600,000-43,750,000_inserted_into_chr8_20000000.md
@@ -6,6 +6,8 @@ The reverse complement of **chr7 43,600,000-43,750,000** is insert in the the re
 
 ### Primary region spanning: chr7 43,600,000-43,750,000 
 
+For this analysis the reads at chr7 43,600,000 and chr7 43,750,000 where selected and analysed using the  ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.
+
 <hr />
 
 ![image](images/insert_chr7_60_43,600,000-43,750,000_RC_target_chr8_60_20000000-21,000,000_plus_chr8_60_ONT_no_2nd_1.jpg)
@@ -31,6 +33,8 @@ Figure 3
 <hr />
 
 ### Primary region spanning: chr8 20000000 
+
+For this analysis the reads at chr8 20,000,000 and chr8 21,000,000 where selected and analysed using the  ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option
 
 <hr />
 
