editing synthetic guide

--- a/synthetic/chr7_43,600,000-43,750,000_inserted_into_chr8_43,600,000-43,750,000.md
+++ b/synthetic/chr7_43,600,000-43,750,000_inserted_into_chr8_43,600,000-43,750,000.md
@@ -4,11 +4,9 @@ Analysis of the genome in which:
 
 The region **chr7 43,600,000-43,750,000** is insert in to the region **chr8 43,600,000-43,750,000**
 
-### Primary region spanning: chr7 43,600,000-43,750,000  
+### Primary region spanning: chr7 43,600,000-43,750,000 
 
-For this analysis the reads at chr7 43,600,000 and chr7 43,750,000 where selected and analysed using the  ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option
-
-<hr />
+For this analysis the reads at chr7 43,600,000 and 43,750,000  were selected and analysed using the ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.<hr />
 
 ![image](images/insert_chr7_60_43,600,000-43,750,000_target_chr8_60_43,600,000-43,750,000_ONT_no_2nd_1.jpg)
 
@@ -33,10 +31,10 @@ Figure 3
 <hr />
 
 ### Primary region spanning: chr8 43,600,000-43,750,000 
-For this analysis the reads at chr8 43,600,000 and chr8 43,750,000 where selected and analysed using the  ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option
-<hr />
 
-![image](images/insert_chr7_60_43,600,000-43,750,000_target_chr8_60_43,600,000-43,750,000_ONT_no_2nd_1.jpg)
+For this analysis the reads at chr8 43,600,000 and 43,750,000 were selected and analysed using the ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.<hr />
+
+![image](images/insert_chr7_60_43,600,000-43,750,000_target_chr8_60_43,600,000-43,750,000_ONT_no_2nd_2.jpg)
 
 Figure 4
 
@@ -44,7 +42,7 @@ Figure 4
 
 <hr />
 
-![image](images/insert_chr7_60_43,600,000-43,750,000_target_chr8_60_43,600,000-43,750,000_ONT_no_2nd_1_all.jpg)
+![image](images/insert_chr7_60_43,600,000-43,750,000_target_chr8_60_43,600,000-43,750,000_ONT_no_2nd_2_all.jpg)
 
 Figure 5
 
@@ -52,7 +50,7 @@ Figure 5
 
 <hr />
 
-![image](images/insert_chr7_60_43,600,000-43,750,000_target_chr8_60_43,600,000-43,750,000_ONT_no_2nd_1_results.jpg)
+![image](images/insert_chr7_60_43,600,000-43,750,000_target_chr8_60_43,600,000-43,750,000_ONT_no_2nd_2_results.jpg)
 
 Figure 6
 
