--- a/synthetic/RC_of_chr7_43,600,000-43,750,000_inserted_into_chr7_43,650,000.md
+++ b/synthetic/RC_of_chr7_43,600,000-43,750,000_inserted_into_chr7_43,650,000.md
@@ -6,10 +6,7 @@ The reverse complement of **chr7 43,600,000-43,750,000** is insert in the the re
 
 ### Primary region spanning: chr7 43,600,000-43,750,000 
 
-For this analysis the reads at chr7 43,600,000 and chr7 43,650,000 where selected and analysed using the
- ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.
-
-<hr />
+For this analysis the reads at chr7 43,600,000 and 43,650,000 were selected and analysed using the ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.<hr />
 
 ![image](images/insert_chr7_60_43,600,000-43,750,000_RC_target_chr7_60_43,650,000-43,800,000_ONT_no_2nd_1.jpg)
 
@@ -35,12 +32,9 @@ Figure 3
 
 ### Primary region spanning: chr7 43,650,000-43,800,000
 
-For this analysis the reads at chr7 43,750,000 and 43,800,000 where selected and analysed using the
- ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.
+For this analysis the reads at chr7 43,750,000 and 43,800,000 were selected and analysed using the ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.<hr />
 
-<hr />
-
-![image](images/insert_chr7_60_43,600,000-43,750,000_RC_target_chr7_60_43,650,000-43,800,000_ONT_no_2nd_1.jpg)
+![image](images/insert_chr7_60_43,600,000-43,750,000_RC_target_chr7_60_43,650,000-43,800,000_ONT_no_2nd_2.jpg)
 
 Figure 4
 
@@ -48,7 +42,7 @@ Figure 4
 
 <hr />
 
-![image](images/insert_chr7_60_43,600,000-43,750,000_RC_target_chr7_60_43,650,000-43,800,000_ONT_no_2nd_1_all.jpg)
+![image](images/insert_chr7_60_43,600,000-43,750,000_RC_target_chr7_60_43,650,000-43,800,000_ONT_no_2nd_2_all.jpg)
 
 Figure 5
 
@@ -56,7 +50,7 @@ Figure 5
 
 <hr />
 
-![image](images/insert_chr7_60_43,600,000-43,750,000_RC_target_chr7_60_43,650,000-43,800,000_ONT_no_2nd_1_results.jpg)
+![image](images/insert_chr7_60_43,600,000-43,750,000_RC_target_chr7_60_43,650,000-43,800,000_ONT_no_2nd_2_results.jpg)
 
 Figure 6
 
