--- a/synthetic/chr7_43,600,000-43,750,000_inserted_into_chr7_43,590,000-43,600,000.md
+++ b/synthetic/chr7_43,600,000-43,750,000_inserted_into_chr7_43,590,000-43,600,000.md
@@ -6,10 +6,7 @@ The region **chr7 43,600,000-43,750,000** is insert in to the region **chr7 43,5
 
 ### Primary region spanning: chr7 43,600,000-43,750,000 
 
-For this analysis the reads at chr7 43,550,000 and chr7 43,750,000 where selected and analysed using the
- ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option. 
-
-<hr />
+For this analysis the reads at chr7 43,600,000 and 43,750,000 were selected and analysed using the ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.<hr />
 
 ![image](images/insert_chr7_60_43,600,000-43,750,000_target_chr7_60_43,590,000-43,600,000_ONT_no_2nd_1.jpg)
 
