--- a/synthetic/chr8_43,600,000-43,750,000_inserted_into_chr7_20000000-21,000,000.md
+++ b/synthetic/chr8_43,600,000-43,750,000_inserted_into_chr7_20000000-21,000,000.md
@@ -6,9 +6,7 @@ The region **chr8 43,600,000-43,750,000** is insert in to the region **chr7 2000
 
 ### Primary region spanning: chr8 43,600,000-43,750,000 
 
-For this analysis the reads at chr8 43,600,000 and chr8 43,750,000 where selected and analysed using the  ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.
-
-<hr />
+For this analysis the reads at chr8 43,600,000 and 43,750,000 were selected and analysed using the ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.<hr />
 
 ![image](images/insert_chr8_60_43,600,000-43,750,000_target_chr7_60_20000000-21,000,000_plus_chr7_60_ONT_no_2nd_1.jpg)
 
@@ -34,11 +32,9 @@ Figure 3
 
 ### Primary region spanning: chr7 20000000-21,000,000 
 
-For this analysis the reads at chr7 20,000,000 and chr7 21,000,000 where selected and analysed using the  ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.
+For this analysis the reads at chr7 20000000 and 21,000,000 were selected and analysed using the ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.<hr />
 
-<hr />
-
-![image](images/insert_chr8_60_43,600,000-43,750,000_target_chr7_60_20000000-21,000,000_plus_chr7_60_ONT_no_2nd_1.jpg)
+![image](images/insert_chr8_60_43,600,000-43,750,000_target_chr7_60_20000000-21,000,000_plus_chr7_60_ONT_no_2nd_2.jpg)
 
 Figure 4
 
@@ -46,7 +42,7 @@ Figure 4
 
 <hr />
 
-![image](images/insert_chr8_60_43,600,000-43,750,000_target_chr7_60_20000000-21,000,000_plus_chr7_60_ONT_no_2nd_1_all.jpg)
+![image](images/insert_chr8_60_43,600,000-43,750,000_target_chr7_60_20000000-21,000,000_plus_chr7_60_ONT_no_2nd_2_all.jpg)
 
 Figure 5
 
@@ -54,7 +50,7 @@ Figure 5
 
 <hr />
 
-![image](images/insert_chr8_60_43,600,000-43,750,000_target_chr7_60_20000000-21,000,000_plus_chr7_60_ONT_no_2nd_1_results.jpg)
+![image](images/insert_chr8_60_43,600,000-43,750,000_target_chr7_60_20000000-21,000,000_plus_chr7_60_ONT_no_2nd_2_results.jpg)
 
 Figure 6
 
