--- a/synthetic/chr8_43,600,000-43,750,000_inserted_into_chr7_43,600,000-43,750,000.md
+++ b/synthetic/chr8_43,600,000-43,750,000_inserted_into_chr7_43,600,000-43,750,000.md
@@ -6,11 +6,9 @@ The region **chr8 43,600,000-43,750,000** is insert in to the region **chr7 43,6
 
 ### Primary region spanning: chr8 43,600,000-43,750,000 
 
-For this analysis the reads at chr8 43,600,000 and chr8 43,750,000 where selected and analysed using the  ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.
+For this analysis the reads at chr8 43,600,000 and 43,750,000 were selected and analysed using the ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.<hr />
 
-<hr />
-
-![image](images/insert_chr8_60_43,600,000-43,750,000_target_chr7_60_43,600,000-43,750,000_ONT_no_2nd_1.jpg)
+![image](images/insert_chr8_60_43,600,000-43,750,000_target_chr7_60_43,600,000-43,750,000_ONT_no_2nd_2.jpg)
 
 Figure 1
 
@@ -18,7 +16,7 @@ Figure 1
 
 <hr />
 
-![image](images/insert_chr8_60_43,600,000-43,750,000_target_chr7_60_43,600,000-43,750,000_ONT_no_2nd_1_all.jpg)
+![image](images/insert_chr8_60_43,600,000-43,750,000_target_chr7_60_43,600,000-43,750,000_ONT_no_2nd_2_all.jpg)
 
 Figure 2
 
@@ -26,7 +24,7 @@ Figure 2
 
 <hr />
 
-![image](images/insert_chr8_60_43,600,000-43,750,000_target_chr7_60_43,600,000-43,750,000_ONT_no_2nd_1_results.jpg)
+![image](images/insert_chr8_60_43,600,000-43,750,000_target_chr7_60_43,600,000-43,750,000_ONT_no_2nd_2_results.jpg)
 
 Figure 3
 
@@ -34,9 +32,7 @@ Figure 3
 
 ### Primary region spanning: chr7 43,600,000-43,750,000 
 
-For this analysis the reads at chr7 43,600,000 and chr7 43,750,000 where selected and analysed using the  ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.
-
-<hr />
+For this analysis the reads at chr7 43,600,000 and 43,750,000 were selected and analysed using the ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.<hr />
 
 ![image](images/insert_chr8_60_43,600,000-43,750,000_target_chr7_60_43,600,000-43,750,000_ONT_no_2nd_1.jpg)
 
