--- a/synthetic/RC_of_chr7_43,600,000-43,750,000_inserted_into_chr7_20000000.md
+++ b/synthetic/RC_of_chr7_43,600,000-43,750,000_inserted_into_chr7_20000000.md
@@ -1,4 +1,4 @@
-# Chr7 43,600,000-43,750,000  inserted into Chr7 20000000
+# The reverse complement of Chr7 43,600,000-43,750,000  inserted into Chr7 20000000
 
 Analysis of the genome in which: 
 
@@ -14,13 +14,9 @@ Figure 1
 
 <hr />
 
-<hr />
-
 ![image](images/insert_chr7_60_43,600,000-43,750,000_RC_target_chr7_60_20000000-21,000,000_ONT_no_2nd_1_all.jpg)
 
 Figure 2
-
-<hr />
 
 <hr />
 
@@ -30,7 +26,7 @@ Figure 3
 
 <hr />
 
-### Primary region spanning: chr7 20000000 
+### Primary region spanning: chr7 20,000,000-21,000,000 
 
 For this analysis the reads at chr7 20,000,000 and 21,000,000 were selected and analysed using the ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.<hr />
 
@@ -40,13 +36,9 @@ Figure 4
 
 <hr />
 
-<hr />
-
 ![image](images/insert_chr7_60_43,600,000-43,750,000_RC_target_chr7_60_20000000-21,000,000_ONT_no_2nd_2_all.jpg)
 
 Figure 5
-
-<hr />
 
 <hr />
 
