--- a/synthetic/RC_of_chr7_43,600,000-43,750,000_inserted_into_chr7_43,610,000.md
+++ b/synthetic/RC_of_chr7_43,600,000-43,750,000_inserted_into_chr7_43,610,000.md
@@ -1,4 +1,4 @@
-# Chr7 43,600,000-43,750,000  inserted into Chr7 43,610,000
+# The reverse complement of Chr7 43,600,000-43,750,000  inserted into Chr7 43,610,000
 
 Analysis of the genome in which: 
 
@@ -14,13 +14,9 @@ Figure 1
 
 <hr />
 
-<hr />
-
 ![image](images/insert_chr7_60_43,600,000-43,750,000_RC_target_chr7_60_43,610,000-43,610,000_ONT_no_2nd_1_all.jpg)
 
 Figure 2
-
-<hr />
 
 <hr />
 
