--- a/synthetic/RC_of_chr8_43,600,000-43,750,000_inserted_into_chr7_50000000.md
+++ b/synthetic/RC_of_chr8_43,600,000-43,750,000_inserted_into_chr7_50000000.md
@@ -1,8 +1,8 @@
-# Chr8 43,600,000-43,750,000  inserted into Chr7 50000000
+# The reverse complement of Chr8 43,600,000-43,750,000  inserted into Chr7 50000000
 
 Analysis of the genome in which: 
 
-The reverse complement of **chr8 43,600,000-43,750,000** is insert in the the region **chr7 50000000-51,000,000**
+The reverse complement of **chr8 43,600,000-43,750,000** is insert in the the region **chr7 50,000,000-51,000,000**
 
 ### Primary region spanning: chr8 43,600,000-43,750,000 
 
@@ -14,13 +14,9 @@ Figure 1
 
 <hr />
 
-<hr />
-
 ![image](images/insert_chr8_60_43,600,000-43,750,000_RC_target_chr7_60_50000000-51,000,000_plus_chr7_60_ONT_no_2nd_1_all.jpg)
 
 Figure 2
-
-<hr />
 
 <hr />
 
@@ -40,13 +36,9 @@ Figure 4
 
 <hr />
 
-<hr />
-
 ![image](images/insert_chr8_60_43,600,000-43,750,000_RC_target_chr7_60_50000000-51,000,000_plus_chr7_60_ONT_no_2nd_2_all.jpg)
 
 Figure 5
-
-<hr />
 
 <hr />
 
