--- a/synthetic/chr8_43,600,000-43,750,000_inserted_into_chr7_20000000-21,000,000.md
+++ b/synthetic/chr8_43,600,000-43,750,000_inserted_into_chr7_20000000-21,000,000.md
@@ -14,13 +14,9 @@ Figure 1
 
 <hr />
 
-<hr />
-
 ![image](images/insert_chr8_60_43,600,000-43,750,000_target_chr7_60_20000000-21,000,000_plus_chr7_60_ONT_no_2nd_1_all.jpg)
 
 Figure 2
-
-<hr />
 
 <hr />
 
@@ -30,9 +26,9 @@ Figure 3
 
 <hr />
 
-### Primary region spanning: chr7 20000000-21,000,000 
+### Primary region spanning: chr7 20,000,000-21,000,000 
 
-For this analysis the reads at chr7 20000000 and 21,000,000 were selected and analysed using the ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.<hr />
+For this analysis the reads at chr7 20,000,000 and 21,000,000 were selected and analysed using the ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.<hr />
 
 ![image](images/insert_chr8_60_43,600,000-43,750,000_target_chr7_60_20000000-21,000,000_plus_chr7_60_ONT_no_2nd_2.jpg)
 
@@ -40,13 +36,9 @@ Figure 4
 
 <hr />
 
-<hr />
-
 ![image](images/insert_chr8_60_43,600,000-43,750,000_target_chr7_60_20000000-21,000,000_plus_chr7_60_ONT_no_2nd_2_all.jpg)
 
 Figure 5
-
-<hr />
 
 <hr />
 
