Editing synthetic data guide

--- a/synthetic/chr8_1-4,000,000_inserted_into_chr7_1-3,000,000.md
+++ b/synthetic/chr8_1-4,000,000_inserted_into_chr7_1-3,000,000.md
@@ -1,12 +1,12 @@
 # Chr8 1 4,000,000  inserted into Chr7 1-3,000,000
 
-Analysis of the genome in which: 
+### Analysis of the genome in which: 
 
 The region **chr8 1-4,000,000** is insert in to the region **chr7 1-3,000,000**
 
 ### Primary region spanning: chr8 1-4,000,000 
 
-For this analysis the reads at chr8 1-4,000,000were selected and analysed using the ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.<hr />
+For this analysis the split reads at chr8 1-4,000,000 were selected and analysed using the ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.<hr />
 
 ![image](images/insert_chr8_1-4,000,000_target_chr7_1-3,000,000_ONT_no_2nd_pair_1.jpg)
 
@@ -26,7 +26,7 @@ Figure 3
 
 ### Primary region spanning: chr7 1-3,000,000 
 
-For this analysis the reads at chr7 1 and 3,000,000were selected and analysed using the ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.<hr />
+For this analysis the split reads at chr7 1 and 3,000,000 were selected and analysed using the ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.<hr />
 
 ![image](images/insert_chr8_1-4,000,000_target_chr7_1-3,000,000_ONT_no_2nd_pair_2.jpg)
 
