--- a/synthetic/RC_chr8_43,600,000-43,750,000_inserted_into_chr7_50000000_51000000.md
+++ b/synthetic/RC_chr8_43,600,000-43,750,000_inserted_into_chr7_50000000_51000000.md
@@ -1,16 +1,18 @@
-# The reverse complement of Chr8 43,600,000-43,750,000  inserted into Chr7 50000000
+# Chr8 43,600,000-43,750,000  inserted into Chr7 50000000
 
-Analysis of the genome in which: 
+### Analysis of the genome in which: 
 
-The reverse complement of **chr8 43,600,000-43,750,000** is insert in the the region **chr7 50,000,000-51,000,000**
+The reverse complement of **chr8 43,600,000-43,750,000** is insert in the the region **chr7 50000000-51,000,000**
 
 ### Primary region spanning: chr8 43,600,000-43,750,000 
 
-For this analysis the reads at chr8 43,600,000 and 43,750,000 were selected and analysed using the ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.<hr />
+<hr />
 
 ![image](images/insert_chr8_60_43,600,000-43,750,000_RC_target_chr7_60_50000000-51,000,000_plus_chr7_60_ONT_no_2nd_1.jpg)
 
 Figure 1
+
+<hr />
 
 <hr />
 
@@ -20,15 +22,17 @@ Figure 2
 
 <hr />
 
+<hr />
+
 ![image](images/insert_chr8_60_43,600,000-43,750,000_RC_target_chr7_60_50000000-51,000,000_plus_chr7_60_ONT_no_2nd_1_results.jpg)
 
 Figure 3
 
 <hr />
 
-### Primary region spanning: chr7 50,000,000-51,000,000 
+### Primary region spanning: chr7 50000000 
 
-For this analysis the reads at chr7 50,000,000 and 51,000,000 were selected and analysed using the ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.<hr />
+<hr />
 
 ![image](images/insert_chr8_60_43,600,000-43,750,000_RC_target_chr7_60_50000000-51,000,000_plus_chr7_60_ONT_no_2nd_2.jpg)
 
@@ -36,9 +40,13 @@ Figure 4
 
 <hr />
 
+<hr />
+
 ![image](images/insert_chr8_60_43,600,000-43,750,000_RC_target_chr7_60_50000000-51,000,000_plus_chr7_60_ONT_no_2nd_2_all.jpg)
 
 Figure 5
+
+<hr />
 
 <hr />
 
