--- a/synthetic/RC_of_chr7_156,345,972-159,345,972_inserted_into_chr8_1-4,000,000.md
+++ b/synthetic/RC_of_chr7_156,345,972-159,345,972_inserted_into_chr8_1-4,000,000.md
@@ -1,12 +1,12 @@
 # Chr7 156,345,972 159,345,972  inserted into Chr8 1-4,000,000
 
-Analysis of the genome in which: 
+### Analysis of the genome in which: 
 
 The reverse complement of **chr7 156,345,972-159,345,972** is insert in the the region **chr8 1-4,000,000**
 
 ### Primary region spanning: chr7 156,345,972-159,345,972 
 
-For this analysis the reads at chr7 156,345,972-159,345,972were selected and analysed using the ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.<hr />
+For this analysis the split reads at chr7 156,345,972-159,345,972were selected and analysed using the ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.<hr />
 
 ![image](images/insert_chr7_156,345,972-159,345,972_RC_target_chr8_1-4,000,000_ONT_no_2nd_pair_1.jpg)
 
@@ -26,7 +26,7 @@ Figure 3
 
 ### Primary region spanning: chr8 1-4,000,000 
 
-For this analysis the reads at chr8 1 and 4,000,000were selected and analysed using the ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.<hr />
+For this analysis the split reads at chr8 1 and 4,000,000 were selected and analysed using the ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.<hr />
 
 ![image](images/insert_chr7_156,345,972-159,345,972_RC_target_chr8_1-4,000,000_ONT_no_2nd_pair_2.jpg)
 
