--- a/synthetic/chr7_43,600,000-43,750,000_inserted_into_chr7_43,740,000.md
+++ b/synthetic/chr7_43,600,000-43,750,000_inserted_into_chr7_43,740,000.md
@@ -1,12 +1,12 @@
 # Chr7 43,600,000-43,750,000  inserted into Chr7 43,740,000
 
-Analysis of the genome in which: 
+### Analysis of the genome in which: 
 
 The region **chr7 43,600,000-43,750,000** is insert at **chr7 43,740,000**
 
 ### Primary region spanning: chr7 43,600,000-43,750,000 
 
-For this analysis the reads at chr7 43,600,000 and 43,750,000 were selected and analysed using the ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.<hr />
+For this analysis the split reads at chr7 43,600,000 and 43,750,000 were selected and analysed using the ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.<hr />
 
 ![image](images/insert_chr7_60_43,600,000-43,750,000_target_chr7_60_43,740,000-43,740,000_ONT_no_2nd_1.jpg)
 
