--- a/synthetic/chr8_43,600,000-43,750,000_inserted_into_chr7_20000000-21,000,000.md
+++ b/synthetic/chr8_43,600,000-43,750,000_inserted_into_chr7_20000000-21,000,000.md
@@ -1,12 +1,12 @@
 # Chr8 43,600,000-43,750,000  inserted into Chr7 20000000-21,000,000
 
-Analysis of the genome in which: 
+### Analysis of the genome in which: 
 
 The region **chr8 43,600,000-43,750,000** is insert in to the region **chr7 20000000-21,000,000**
 
 ### Primary region spanning: chr8 43,600,000-43,750,000 
 
-For this analysis the reads at chr8 43,600,000 and 43,750,000 were selected and analysed using the ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.<hr />
+For this analysis the split reads at chr8 43,600,000 and 43,750,000 were selected and analysed using the ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.<hr />
 
 ![image](images/insert_chr8_60_43,600,000-43,750,000_target_chr7_60_20000000-21,000,000_plus_chr7_60_ONT_no_2nd_1.jpg)
 
@@ -28,7 +28,7 @@ Figure 3
 
 ### Primary region spanning: chr7 20,000,000-21,000,000 
 
-For this analysis the reads at chr7 20,000,000 and 21,000,000 were selected and analysed using the ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.<hr />
+For this analysis the split reads at chr7 20,000,000 and 21,000,000 were selected and analysed using the ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.<hr />
 
 ![image](images/insert_chr8_60_43,600,000-43,750,000_target_chr7_60_20000000-21,000,000_plus_chr7_60_ONT_no_2nd_2.jpg)
 
