--- a/synthetic/RC_of_chr7_43,600,000-43,750,000_inserted_into_chr7_43,650,000-43,750,000.md
+++ b/synthetic/RC_of_chr7_43,600,000-43,750,000_inserted_into_chr7_43,650,000-43,750,000.md
@@ -24,3 +24,23 @@ Figure 2
 
 Figure 3
 
+### Primary region spanning: chr7 43,600,000-43,750,000 
+
+For this analysis the split reads at chr7 43,750,000 who's secondary alignment maps to 43,650,000 (blue line in Figure 4) and 43,750,000 who's secondary alignment maps to 43,600,000 (black line in Figure 4) were selected and analysed using the ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.<hr />
+
+![image](images/insert_chr7_60_43,600,000-43,750,000_RC_target_chr7_60_43,650,000-43,750,000_ONT_no_2nd_2.jpg)
+
+Figure 2
+
+<hr />
+
+![image](images/insert_chr7_60_43,600,000-43,750,000_RC_target_chr7_60_43,650,000-43,750,000_ONT_no_2nd_2_all.jpg)
+
+Figure 2
+
+<hr />
+
+![image](images/insert_chr7_60_43,600,000-43,750,000_RC_target_chr7_60_43,650,000-43,750,000_ONT_no_2nd_2_results.jpg)
+
+Figure 2
+
