--- a/synthetic/RC_of_chr7_43,600,000-43,750,000_inserted_into_chr7_43,600,000-43,700,000.md
+++ b/synthetic/RC_of_chr7_43,600,000-43,750,000_inserted_into_chr7_43,600,000-43,700,000.md
@@ -6,7 +6,7 @@ The reverse complement of **chr7 43,600,000-43,750,000** is inserted in the the 
 
 ### Primary region spanning: chr7 43,600,000-43,750,000 
 
-For this analysis the split reads at chr7 43,700,000-43,750,000 were selected and analysed using the ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.<hr />
+For this analysis the split reads at chr7 43,700,000 and 43,750,000 were selected and analysed using the ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.<hr />
 
 ![image](images/insert_chr7_60_43,600,000-43,750,000_RC_target_chr7_60_43,600,000-43,700,000_ONT_no_2nd_1.jpg)
 
@@ -14,15 +14,34 @@ Figure 1
 
 <hr />
 
-![image](images/insert_chr7_60_43,600,000-43,750,000_RC_target_chr7_60_43,600,000-43,700,000_ONT_no_2nd_2_all.jpg)
+![image](images/insert_chr7_60_43,600,000-43,750,000_RC_target_chr7_60_43,600,000-43,700,000_ONT_no_2nd_1_all.jpg)
 
 Figure 2
 
-### Primary region spanning: chr7 43,600,000-43,700,000 
-
-For this analysis the reads at chr7 43,600,000 and 43,700,000 were selected and analysed using the ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.<hr />
+<hr />
 
 ![image](images/insert_chr7_60_43,600,000-43,750,000_RC_target_chr7_60_43,600,000-43,700,000_ONT_no_2nd_1_results.jpg)
 
 Figure 3
 
+### Primary region spanning: chr7 43,600,000-43,700,000 
+
+For this analysis the reads at chr7 43,600,000 who's secondary alignments map to 43,750,000 (blue line in Figure 4) and 43,700,000 who's secondary alignments map to 43,700,000 (black line in Figure 4) were selected and analysed using the ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.<hr />
+
+![image](images/insert_chr7_60_43,600,000-43,750,000_RC_target_chr7_60_43,600,000-43,700,000_ONT_no_2nd_2.jpg)
+
+Figure 4
+
+<hr />
+
+![image](images/insert_chr7_60_43,600,000-43,750,000_RC_target_chr7_60_43,600,000-43,700,000_ONT_no_2nd_2_all.jpg)
+
+Figure 5
+
+<hr />
+
+![image](images/insert_chr7_60_43,600,000-43,750,000_RC_target_chr7_60_43,600,000-43,700,000_ONT_no_2nd_2_results.jpg)
+
+Figure 6
+
+<hr />
