--- a/synthetic/chr8_141,138,635-145,138,635_inserted_into_chr7_156,345,972-159,345,972.md
+++ b/synthetic/chr8_141,138,635-145,138,635_inserted_into_chr7_156,345,972-159,345,972.md
@@ -6,7 +6,7 @@ The region **chr8 141,138,635-145,138,635** is insert in to the region **chr7 15
 
 ### Primary region spanning: chr8 141,138,635-145,138,635 
 
-For this analysis the split reads at chr8 141,138,635-145,138,635were selected and analysed using the ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.<hr />
+For this analysis the split reads at chr8 141,138,635-145,138,635were selected and analysed using the ___Variant determination___ > ___Use soft clip data___ > ___Translocation___ menu option.<hr />
 
 ![image](images/insert_chr8_141,138,635-145,138,635_target_chr7_156,345,972-159,345,972_ONT_no_2nd_pair_1.jpg)
 
@@ -26,7 +26,7 @@ Figure 3
 
 ### Primary region spanning: chr7 156,345,972-159,345,972 
 
-For this analysis the split reads at chr7 156,345,972 and 159,345,972were selected and analysed using the ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.<hr />
+For this analysis the split reads at chr7 156,345,972 and 159,345,972were selected and analysed using the ___Variant determination___ > ___Use soft clip data___ > ___Translocation___ menu option.<hr />
 
 ![image](images/insert_chr8_141,138,635-145,138,635_target_chr7_156,345,972-159,345,972_ONT_no_2nd_pair_2.jpg)
 
