--- a/synthetic/chr7_43,600,000-43,750,000_inserted_into_chr7_43,590,000-43,600,000.md
+++ b/synthetic/chr7_43,600,000-43,750,000_inserted_into_chr7_43,590,000-43,600,000.md
@@ -4,25 +4,47 @@
 
 The region **chr7 43,600,000-43,750,000** is insert in to the region **chr7 43,590,000-43,600,000**
 
-### Primary region spanning: chr7 43,600,000-43,750,000 
+### Primary region spanning: chr7 43,600,000-43,750,000: Selection 1
+For this analysis the split reads at chr7 43,590,000 (black line Figure 1 and 2) and 43,750,000 (green line Figure 1 and 2)  were selected and analysed using the ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.<hr />
 
-For this analysis the split reads at chr7 43,600,000 who's secondary alignment maps to 43,590,000 (blue line Figure 4) and 43,750,000 who's secondary alignment maps to 43,750,000 (black line Figure 4)  were selected and analysed using the ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.<hr />
-
-![image](images/insert_chr7_60_43,600,000-43,750,000_target_chr7_60_43,590,000-43,600,000_ONT_no_2nd_2.jpg)
+![image](images/insert_chr7_60_43,600,000-43,750,000_target_chr7_60_43,590,000-43,600,000_ONT_no_2nd_1.jpg)
 
 Figure 1
 
 <hr />
 
-![image](images/insert_chr7_60_43,600,000-43,750,000_target_chr7_60_43,590,000-43,600,000_ONT_no_2nd_2_all.jpg)
+![image](images/insert_chr7_60_43,600,000-43,750,000_target_chr7_60_43,590,000-43,600,000_ONT_no_2nd_1_all.jpg)
 
 Figure 2
 
 <hr />
 
-![image](images/insert_chr7_60_43,600,000-43,750,000_target_chr7_60_43,590,000-43,600,000_ONT_no_2nd_2_result.jpg)
+![image](images/insert_chr7_60_43,600,000-43,750,000_target_chr7_60_43,590,000-43,600,000_ONT_no_2nd_1_result.jpg)
 
 Figure 3
+
+<hr />
+
+## Primary region spanning: chr7 43,600,000-43,750,000: Selection 2
+
+
+For this analysis the split reads at chr7 43,600,000 who's secondary alignment maps to 43,590,000 (blue line Figure 4) and 43,750,000 who's secondary alignment maps to 43,750,000 (green line Figure 4)  were selected and analysed using the ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.<hr />
+
+![image](images/insert_chr7_60_43,600,000-43,750,000_target_chr7_60_43,590,000-43,600,000_ONT_no_2nd_2.jpg)
+
+Figure 4
+
+<hr />
+
+![image](images/insert_chr7_60_43,600,000-43,750,000_target_chr7_60_43,590,000-43,600,000_ONT_no_2nd_2_all.jpg)
+
+Figure 5
+
+<hr />
+
+![image](images/insert_chr7_60_43,600,000-43,750,000_target_chr7_60_43,590,000-43,600,000_ONT_no_2nd_2_results.jpg)
+
+Figure 6
 
 <hr />
 
