--- a/synthetic/chr7_43,600,000-43,750,000_inserted_into_chr7_43,610,000.md
+++ b/synthetic/chr7_43,600,000-43,750,000_inserted_into_chr7_43,610,000.md
@@ -6,7 +6,7 @@ The region **chr7 43,600,000-43,750,000** is insert at **chr7 43,610,000**
 
 ### Primary region spanning: chr7 43,600,000-43,750,000 
 
-For this analysis the split reads at chr7 43,600,000 and 43,750,000 were selected and analysed using the ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.<hr />
+For this analysis the split reads at chr7 43,600,000  (black line in figures 1 and 2) and 43,750,000 (green line in figures 1 and 2) were selected and analysed using the ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.<hr />
 
 ![image](images/insert_chr7_60_43,600,000-43,750,000_target_chr7_60_43,610,000-43,610,000_ONT_no_2nd_1.jpg)
 
@@ -28,23 +28,23 @@ Figure 3
 
 ### Primary region spanning: chr7 43,600,000-43,750,000 
 
-For this analysis the split reads at chr7 43,590,000 who's secondary alignments map to 43,600,000 (blue line Figure 4) and who's secondary alignments map to 43,750,000 (black line Figure 4) were selected and analysed using the ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.<hr />
+For this analysis the split reads at chr7 43,610,000 who's secondary alignments map to 43,600,000 (red line Figure 4 and 5) and who's secondary alignments map to 43,750,000 (green line Figure 4 and 5) were selected and analysed using the ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.<hr />
 
-![image](images/insert_chr7_60_43,600,000-43,750,000_target_chr7_60_43,590,000-43,590,000_ONT_no_2nd_2.jpg)
+![image](images/insert_chr7_60_43,600,000-43,750,000_target_chr7_60_43,610,000-43,610,000_ONT_no_2nd_2.jpg)
 
 Figure 4
 
 
 <hr />
 
-![image](images/insert_chr7_60_43,600,000-43,750,000_target_chr7_60_43,590,000-43,590,000_ONT_no_2nd_2_all.jpg)
+![image](images/insert_chr7_60_43,600,000-43,750,000_target_chr7_60_43,610,000-43,610,000_ONT_no_2nd_2_all.jpg)
 
 Figure 5
 
 
 <hr />
 
-![image](images/insert_chr7_60_43,600,000-43,750,000_target_chr7_60_43,590,000-43,590,000_ONT_no_2nd_2_results.jpg)
+![image](images/insert_chr7_60_43,600,000-43,750,000_target_chr7_60_43,610,000-43,610,000_ONT_no_2nd_2_results.jpg)
 
 Figure 6
 
