--- a/synthetic/chr8_43,600,000-43,750,000_inserted_into_chr7_20000000-21,000,000.md
+++ b/synthetic/chr8_43,600,000-43,750,000_inserted_into_chr7_20000000-21,000,000.md
@@ -28,7 +28,7 @@ Figure 3
 
 ### Primary region spanning: chr7 20,000,000-21,000,000 
 
-For this analysis the split reads at chr7 20,000,000 and 21,000,000 were selected and analysed using the ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.<hr />
+For this analysis the split reads at chr7 20,000,000 (black line in Figure 4 and 5) and 21,000,000 (blue line in Figure 4 and 5)  were selected and analysed using the ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.<hr />
 
 ![image](images/insert_chr8_60_43,600,000-43,750,000_target_chr7_60_20000000-21,000,000_plus_chr7_60_ONT_no_2nd_2.jpg)
 
