--- a/synthetic/chr7_43,600,000-43,750,000_inserted_into_chr8_20000000-21,000,000.md
+++ b/synthetic/chr7_43,600,000-43,750,000_inserted_into_chr8_20000000-21,000,000.md
@@ -6,7 +6,7 @@ The region **chr7 43,600,000-43,750,000** is insert in to the region **chr8 2000
 
 ### Primary region spanning: chr7 43,600,000-43,750,000 
 
-For this analysis the split reads at chr7 43,600,000 and 43,750,000 were selected and analysed using the ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.<hr />
+For this analysis the split reads at chr7 43,600,000 (black line in Figure 1 and 2) and 43,750,000 (blue line in Figure 1 and 2) were selected and analysed using the ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.<hr />
 
 ![image](images/insert_chr7_60_43,600,000-43,750,000_target_chr8_60_20000000-21,000,000_plus_chr8_60_ONT_no_2nd_1.jpg)
 
@@ -28,7 +28,7 @@ Figure 3
 
 ### Primary region spanning: chr8 20,000,000-21,000,000 
 
-For this analysis the split reads at chr8 20,000,000 and 21,000,000 were selected and analysed using the ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.<hr />
+For this analysis the split reads at chr8 20,000,000 (black line in Figure 4 and 5) and 21,000,000 (blue line in Figure 4 and 5) were selected and analysed using the ___Variant determination___ > ___Use soft clip data___ > ___Complex rearrangement___ menu option.<hr />
 
 ![image](images/insert_chr7_60_43,600,000-43,750,000_target_chr8_60_20000000-21,000,000_plus_chr8_60_ONT_no_2nd_2.jpg)
 
