Editing synthetic guide

--- a/synthetic/RC_of_chr7_43,600,000-43,750,000_inserted_into_chr7_43,600,000-43,750,000.md
+++ b/synthetic/RC_of_chr7_43,600,000-43,750,000_inserted_into_chr7_43,600,000-43,750,000.md
@@ -24,3 +24,14 @@ Figure 2
 
 Figure 3
 
+<hr />
+
+## Schematic drawing of read alignments
+
+The orientations of the alignments across the rearrangement is shown in Figure 7. Alignments shown in red indicate the orientation of the primary and secondary alignments differ.
+
+<hr />
+
+![image](images/jpg)
+
+Figure 7
