--- a/synthetic/chr7_156,345,972-159,345,972_inserted_into_chr8_141,138,635-145,138,635.md
+++ b/synthetic/chr7_156,345,972-159,345,972_inserted_into_chr8_141,138,635-145,138,635.md
@@ -44,3 +44,14 @@ Figure 5
 
 Figure 6
 
+<hr />
+
+## Schematic drawing of read alignments
+
+The orientations of the alignments across the rearrangement is shown in Figure 7. Alignments shown in red indicate the orientation of the primary and secondary alignments differ.
+
+<hr />
+
+![image](images/insert_chr7_156,345,972-159,345,972_target_chr8_141,138,635-145,138,635_ONT_no_2nd_pair.jpg)
+
+Figure 7
