--- a/synthetic/RC_of_chr8_43,600,000-43,750,000_inserted_into_chr7_50000000_51000000.md
+++ b/synthetic/RC_of_chr8_43,600,000-43,750,000_inserted_into_chr7_50000000_51000000.md
@@ -56,3 +56,13 @@ Figure 6
 
 <hr />
 
+## Schematic drawing of read alignments
+
+The orientations of the alignments across the rearrangement is shown in Figure 7. Alignments shown in red indicate the orientation of the primary and secondary alignments differ.
+
+<hr />
+
+![image](images/jpg)
+
+Figure 7
+
