--- a/synthetic/chr7_1-3,000,000_inserted_into_chr8_1-4,000,000.md
+++ b/synthetic/chr7_1-3,000,000_inserted_into_chr8_1-4,000,000.md
@@ -44,3 +44,12 @@ Figure 5
 
 Figure 6
 
+## Schematic drawing of read alignments
+
+The orientations of the alignments across the rearrangement is shown in Figure 7. Alignments shown in red indicate the orientation of the primary and secondary alignments differ.
+
+<hr />
+
+![image](images/insert_chr7_1-3,000,000_target_chr8_1-4,000,000_ONT_no_2nd_pair.jpg)
+
+Figure 7
