--- a/synthetic/chr7_43,600,000-43,750,000_deleted.md
+++ b/synthetic/chr7_43,600,000-43,750,000_deleted.md
@@ -28,3 +28,12 @@ Figure 3
 
 <hr />
 
+## Schematic drawing of read alignments
+
+The orientations of the alignments across the rearrangement is shown in Figure 7. Alignments shown in red indicate the orientation of the primary and secondary alignments differ.
+
+<hr />
+
+![image](images/deletion_chr7_43,600,000-43,750,000.jpg)
+
+Figure 7
