--- a/synthetic/chr7_43,600,000-43,750,000_inserted_into_chr7_43,590,000.md
+++ b/synthetic/chr7_43,600,000-43,750,000_inserted_into_chr7_43,590,000.md
@@ -52,3 +52,13 @@ Figure 5
 Figure 6
 
 <hr />
+
+## Schematic drawing of read alignments
+
+The orientations of the alignments across the rearrangement is shown in Figure 7. Alignments shown in red indicate the orientation of the primary and secondary alignments differ.
+
+<hr />
+
+![image](images/insert_chr7_60_43,600,000-43,750,000_target_chr7_60_43,590,000-43,590,000_ONT_no_2nd.jpg)
+
+Figure 7
