editing synthetic guide

--- a/synthetic/RC_of_chr7_1-3,000,000_inserted_into_chr8_141,138,635-145,138,635.md
+++ b/synthetic/RC_of_chr7_1-3,000,000_inserted_into_chr8_141,138,635-145,138,635.md
@@ -52,6 +52,6 @@ The orientations of the alignments across the rearrangement is shown in Figure 7
 
 <hr />
 
-![image](images/jpg)
+![image](images/insert_chr7_1-3,000,000_RC_target_chr8_141,138,635-145,138,635_ONT_no_2nd_pair.jpg)
 
 Figure 7
