--- a/synthetic/RC_of_chr7_43,600,000-43,750,000_inserted_into_chr8_43,600,000-43,750,000.md
+++ b/synthetic/RC_of_chr7_43,600,000-43,750,000_inserted_into_chr8_43,600,000-43,750,000.md
@@ -54,7 +54,7 @@ The orientations of the alignments across the rearrangement is shown in Figure 7
 
 <hr />
 
-![image](images/jpg)
+![image](images/insert_chr7_60_43,600,000-43,750,000_RC_target_chr8_60_43,600,000-43,750,000_ONT_no_2nd.jpg)
 
 Figure 7
 
