--- a/synthetic/chr8_1-4,000,000_inserted_into_chr7_1-3,000,000.md
+++ b/synthetic/chr8_1-4,000,000_inserted_into_chr7_1-3,000,000.md
@@ -52,6 +52,6 @@ The orientations of the alignments across the rearrangement is shown in Figure 7
 
 <hr />
 
-![image](images/jpg)
+![image](images/insert_chr8_1-4,000,000_target_chr7_1-3,000,000_ONT_no_2nd_pair.jpg)
 
 Figure 7
