--- a/synthetic/chr8_141,138,635-145,138,635_inserted_into_chr7_156,345,972-159,345,972.md
+++ b/synthetic/chr8_141,138,635-145,138,635_inserted_into_chr7_156,345,972-159,345,972.md
@@ -52,6 +52,6 @@ The orientations of the alignments across the rearrangement is shown in Figure 7
 
 <hr />
 
-![image](images/jpg)
+![image](images/insert_chr8_141,138,635-145,138,635_target_chr7_156,345,972-159,345,972_ONT_no_2nd_pair.jpg)
 
 Figure 7
